fix: overflow when the gallery is inside other containers [skip ci]
Fix the fix in #2653

This is a simple fix, hopefully it will be fully resolved in the future.

--- a/assets/css/compiled/main.css
+++ b/assets/css/compiled/main.css
@@ -4390,7 +4390,7 @@ pre {
 }
 @media (width < 853px) {
   .width-patch {
-    width: 90vw;
+    width: 80vw;
   }
 }
 @media (width >= 853px) {
